--- a/Wpf.TestHarness/Themes/BlueTheme.xaml
+++ b/Wpf.TestHarness/Themes/BlueTheme.xaml
@@ -9,4 +9,9 @@
                 Value="White" />
     </Style>
     
+    <Style TargetType="{x:Type TextBlock}">
+        <Setter Property="FontStyle"
+                Value="Italic" />
+    </Style>
+    
 </ResourceDictionary>
