Upgraded to .Net 4.6.1

--- a/Simple.Wpf.Themes/Themes.xaml
+++ b/Simple.Wpf.Themes/Themes.xaml
@@ -7,6 +7,6 @@
              d:DesignHeight="300" d:DesignWidth="300">
     <ComboBox x:Name="ThemesComboBox"
               HorizontalAlignment="Stretch"
-              HorizontalContentAlignment="Left">
-    </ComboBox>
+              HorizontalContentAlignment="Left" />
 </UserControl>
+
